# munich-hackathon-15-03-2025

./: README.md
backend/app/: config.py
backend/app/chat/: agent.py  router.py
backend/app/company/: facade.py  llm.py  models.py  router.py  schemas.py
backend/app/dashboard/: router.py  schemas.py
backend/app/evaluation/: facade.py  llm.py  models.py  router.py  schemas.py
backend/app/rfq/: models.py  rfq_mock.py  router.py  schemas.py
data-pipeline/: README.md  config.py  enhance_data.py  main.py  models.py  parse_data.py  pyproject.toml
frontend/: bun.lockb  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/company/: page.tsx
frontend/src/app/overview/: page.tsx
frontend/src/app/rfq/: page.tsx
frontend/src/app/rfq/details/: RequirementRow.tsx  page.tsx
frontend/src/components/: app-sidebar.tsx  breadcrumb-nav.tsx  nav-main.tsx
frontend/src/components/ui/: chart.tsx
frontend/src/lib/: api.ts  apiTypes.ts  types.ts
